--- a/.github/workflows/indexnow.yml
+++ b/.github/workflows/indexnow.yml
@@ -16,11 +16,15 @@ jobs:
         run: |
           curl -H "Content-Type: application/json; charset=utf-8" -X POST "https://api.indexnow.org/IndexNow" -d '{
             "host": "peterlight123.github.io",
-            "key": "f8a6cd2575504cd0b2d3518254abdc9b",
-            "keyLocation": "https://peterlight123.github.io/f8a6cd2575504cd0b2d3518254abdc9b.txt",
+            "key": "5bcae238ca7e46f59f179c03bf8ce433",
+            "keyLocation": "https://peterlight123.github.io/5bcae238ca7e46f59f179c03bf8ce433",
             "urlList": [
               "https://peterlight123.github.io/portfolio/",
               "https://peterlight123.github.io/portfolio/about.html",
+              "https://peterlight123.github.io/portfolio/contact.html",
+              "https://peterlight123.github.io/portfolio/testimonials.html",
+              "https://peterlight123.github.io/portfolio/sponsor.html",
+              "https://peterlight123.github.io/portfolio/cv.html",
               "https://peterlight123.github.io/portfolio/projects.html"
             ]
           }'
